@@ -7,6 +7,7 @@ Version 2.2 ->
  - added --wininst to enable use of bdist_wininst with distutils (Jonas Maurus)
  - added --help to describe command line options (Jonas Maurus)
  - added support for --rename to workaround python flattened namespace clashes
+ - fixed bug with Enumeration/Iterator template function instantiation
  - 
 
 Version 2.1 -> 2.2
